--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -9,17 +9,23 @@
   .athlete-box {
     width: 700px;
     height: 200px;
-    border: 1px solid black;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     display: none; 
     
-    
+    .info {
+      float: left;
+    }
     
     img {
-      width: 20%;
-      height: 40%;
+      width: 150px;
+      height: 150px;
       float: left;
       margin: 2%;
+    }
+    
+    .events {
+      float: right;
     }
     &.show {
         display: block;
@@ -35,43 +41,35 @@
 }
 
 table {
-
+  .display-flex;
   font-family: @df-sans;
   border-collapse: separate;
   width: 1200px;
+  cellspacing: 0;
+  cellpadding: 1;
       @media @mobile {
       width: 100%;
       height: 100%;
     }
 }
 
-
-div .table-body {
-  width:1200px; 
-  height:100%; 
-   overflow-x: hidden;
-    overflow-y: scroll;
-}
-
-
 th {
-  width: 50px;
+  text-align: center;
    @media @mobile {
       display: none;
    }
 }
 
 td {
-  
+  flex(0 0 5%);
   margin: 0;
-  width:50px;
   @media @mobile {
     display: block;
     width: 100%;
   }
   
   &.athlete-name {
-    width: 130px;
+    width: 100px;
     font-size: 10px;
     background-color: @df-footer-gray;
     @media @mobile {
@@ -83,8 +81,8 @@ td {
 
   &.event{
     background-color: @st-light-purple;
-    width: 50px;
-    height: 50px;
+  .flex(1);
+
     padding-left: 2%;
     padding-right: 2%;
     font-size: 8px;
