--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1,73 +1,63 @@
 @import "seattletimes";
 .container {
-  max-width: 1200px;
-  position: relative;
-  .display-flex;
-  flex-direction: column;
   padding: 3%;
-  
+  position: relative;
+
   .athlete-box {
     width: 700px;
     height: 200px;
     margin-left: auto;
     margin-right: auto;
     display: none; 
-    
+
     .info {
       float: left;
     }
-    
+
     img {
       width: 150px;
       height: 150px;
       float: left;
       margin: 2%;
     }
-    
+
     .events {
       float: right;
     }
     &.show {
-        display: block;
+      display: block;
     }
   }  
-  
-  .table-box {
-    width: 1300px;
-    height: 400px;
 
-  }
+
 
 }
 
-table {
-  .display-flex;
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 3em 0;
+  padding: 0;  
   font-family: @df-sans;
-  border-collapse: separate;
-  width: 1200px;
-  cellspacing: 0;
-  cellpadding: 1;
-      @media @mobile {
-      width: 100%;
-      height: 100%;
-    }
+
+  @media @mobile {
+    width: 100%;
+    height: 100%;
+  }
 }
 
-th {
-  text-align: center;
-   @media @mobile {
-      display: none;
-   }
-}
+row-item {
 
-td {
-  flex(0 0 5%);
+  .flex(0 0 4%);
+
   margin: 0;
   @media @mobile {
     display: block;
     width: 100%;
   }
-  
+
+
+
   &.athlete-name {
     width: 100px;
     font-size: 10px;
@@ -81,18 +71,18 @@ td {
 
   &.event{
     background-color: @st-light-purple;
-  .flex(1);
+    .flex(1);
 
     padding-left: 2%;
     padding-right: 2%;
     font-size: 8px;
-      @media @mobile {
+    @media @mobile {
       width: 100%;
       height: 100%;
       border-bottom: 1px solid white;
     }  
   }  
-  
+
   &.no-event{
     .event; 
     @media @mobile {
