--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -2,40 +2,9 @@
 .container {
   padding: 3%;
   position: relative;
-
-  .athlete-box {
-    width: 700px;
-    height: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    display: none; 
-
-    .info {
-      float: left;
-    }
-
-    img {
-      width: 150px;
-      height: 150px;
-      float: left;
-      margin: 2%;
-    }
-
-    .events {
-      float: right;
-    }
-    &.show {
-      display: block;
-    }
-  }  
-
-
-
 }
 
 .table {
-  display: flex;
-  flex-wrap: wrap;
   margin: 0 0 3em 0;
   padding: 0;  
   font-family: @df-sans;
@@ -44,13 +13,27 @@
     width: 100%;
     height: 100%;
   }
+  
+  &-header {
+  display: flex;
+  flex-direction: row;
+  }
 }
 
-row-item {
+.table-athlete-row {
+  display: flex;
+  flex-direction: row;
+}
 
-  .flex(0 0 4%);
+.row-item {
+  
+  flex-direction: row;
+  .flex(0 0 5%);
+  
+  text-align: center;
+  
 
-  margin: 0;
+
   @media @mobile {
     display: block;
     width: 100%;
@@ -89,5 +72,6 @@ row-item {
       display: none;
     }  
   }
+}
 }
 
