--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -5,73 +5,78 @@
 }
 
 .table {
-  margin: 0 0 3em 0;
-  padding: 0;  
+
   font-family: @df-sans;
 
   @media @mobile {
     width: 100%;
     height: 100%;
-  }
-  
-  &-header {
-  display: flex;
-  flex-direction: row;
-  }
-}
-
-.table-athlete-row {
-  display: flex;
-  flex-direction: row;
-}
-
-.row-item {
-  
-  flex-direction: row;
-  .flex(0 0 5%);
-  
-  text-align: center;
-  
-
-
-  @media @mobile {
     display: block;
-    width: 100%;
   }
 
+  &-column {
+    .display-flex;
 
-
-  &.athlete-name {
-    width: 100px;
-    font-size: 10px;
-    background-color: @df-footer-gray;
+    &.dates {
+      font-size: 11px;
+      @media @mobile {
+        display: none;
+      }
+    }
+    
     @media @mobile {
       width: 100%;
       height: 100%;
       display: block;
     }
   }
+}
 
-  &.event{
-    background-color: @st-light-purple;
-    .flex(1);
+.row-item {
+  .flex(1 1 6%);
+  padding: 5px;
+  border: .5px solid rgba(255, 255, 255, 0.44);
+  &.athlete-name {
+    font-size: 10px;
+    background-color: @df-footer-gray;
+    .flex(0 0 100px);
 
-    padding-left: 2%;
-    padding-right: 2%;
-    font-size: 8px;
     @media @mobile {
+      display: block;
       width: 100%;
       height: 100%;
-      border-bottom: 1px solid white;
+    }
+  }
+
+  &.event{
+
+    background-color: @st-light-purple;
+    font-size: 8px;
+    text-align: center;
+    
+    .icon {
+      font-style: normal;
+    }
+    
+    @media @mobile {
+      margin-left: 2%;
     }  
   }  
 
-  &.no-event{
-    .event; 
+  &.noevent {
+
+    background-color: @df-navy;
     @media @mobile {
       display: none;
     }  
   }
+
+  @media @mobile {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
 }
-}
+
 
