--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -2,6 +2,7 @@
 .container {
   padding: 3%;
   position: relative;
+  
 }
 
 .table {
@@ -34,7 +35,7 @@
 
 .row-item {
   .flex(1 1 6%);
-  padding: 5px;
+  text-align: center;
   border: .5px solid rgba(255, 255, 255, 0.44);
   &.athlete-name {
     font-size: 10px;
@@ -79,4 +80,51 @@
 
 }
 
+.athlete-box {
+  width: 100%;
+  display: none;
+  
+  &.show {
+    display: block;
+  }
+  
+}
 
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
