--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1,30 +1,32 @@
 @import "seattletimes";
+
 .container {
   padding: 3%;
   position: relative;
-  
+  width: 90%;
 }
 
 .table {
-
   font-family: @df-sans;
-
+  
   @media @mobile {
     width: 100%;
     height: 100%;
     display: block;
   }
 
+
   &-column {
     .display-flex;
 
     &.dates {
       font-size: 11px;
+      
       @media @mobile {
         display: none;
       }
     }
-    
+
     @media @mobile {
       width: 100%;
       height: 100%;
@@ -34,10 +36,17 @@
 }
 
 .row-item {
+  
   .flex(1 1 6%);
   text-align: center;
   border: .5px solid rgba(255, 255, 255, 0.44);
+  &.highlight {
+    background-color: gray;
+  }
+  
   &.athlete-name {
+    cursor: pointer;
+
     font-size: 10px;
     background-color: @df-footer-gray;
     .flex(0 0 100px);
@@ -50,22 +59,28 @@
   }
 
   &.event{
+    &.highlight {
+      background-color: rgb(180, 140, 220);
+      cursor: pointer;
 
+    }
     background-color: @st-light-purple;
     font-size: 8px;
     text-align: center;
-    
+
     .icon {
       font-style: normal;
     }
-    
+
     @media @mobile {
       margin-left: 2%;
     }  
   }  
 
   &.noevent {
-
+    &.highlight {
+      background-color: rgb(43, 50, 112);
+    }
     background-color: @df-navy;
     @media @mobile {
       display: none;
@@ -83,48 +98,59 @@
 .athlete-box {
   width: 100%;
   display: none;
-  
+
+
   &.show {
     display: block;
   }
-  
+
 }
 
 .tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
 }
 
 .tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -60px;
-    opacity: 0;
-    transition: opacity 1s;
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 1s;
 }
 
 .tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
 }
 
 .tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
+  visibility: visible;
+  opacity: 1;
+}
+
+.box {
+  background-color: darkseagreen;
+  margin-bottom: 2%;
+  margin-right: 2%;
+  margin-left: 2%;
+  .name {
+    font-size: 14px;
+  }
 }
