--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -3,7 +3,8 @@
 .container {
   padding: 3%;
   position: relative;
-  width: 90%;
+  width: 100%;
+  max-width: 960px;
 }
 
 .table {
@@ -55,21 +56,23 @@
       display: block;
       width: 100%;
       height: 100%;
+      text-align: left;
     }
   }
 
   &.event{
-    &.highlight {
-      background-color: rgb(180, 140, 220);
-      cursor: default;
-
-    }
     background-color: @st-light-purple;
     font-size: 8px;
     text-align: center;
+    &.highlight {
+      background-color: rgb(180, 140, 220);
+      cursor: default;
+    }
 
     @media @mobile {
       margin-left: 2%;
+      display: block;
+      
     }  
   }  
 
@@ -86,18 +89,6 @@
   @media @mobile {
     display: block;
     width: 100%;
-    height: 100%;
-  }
-
-}
-
-.athlete-box {
-  width: 100%;
-  display: none;
-
-
-  &.show {
-    display: block;
   }
 
 }
@@ -105,54 +96,74 @@
 .tooltip {
   position: relative;
   width: 25px;
-  img {
-    position: relative;
+  margin: 0 auto;
+  @media @mobile {
+    text-align: left;
+    width: 100%;
+    
   }
+  
 
   .icon {
-    font-style: normal;
+    img {
+    position: relative;
+      @media @mobile {
+        width: 10%;
+      }
+    }
+
   }
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
-  opacity: 0;
-  transition: opacity 1s;
-}
-
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-.box {
-  background-color: darkseagreen;
-  margin-bottom: 2%;
-  margin-right: 2%;
-  margin-left: 2%;
-  .name {
+  .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: @st-light-green;
+    color: black;
     font-size: 14px;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -100px;
+    opacity: 0;
+    transition: opacity .5s;
+
+    @media @mobile {
+      visibility: visible;
+      opacity: 1;
+      position: relative;
+      bottom: 0;
+      background-color: inherit;
+      border-radius: 0px;
+      left: 0;
+      bottom: 0%;
+      margin: 5px;
+      display: inline-block;
+      text-align: left;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: @st-light-green transparent transparent transparent;
+      @media @mobile {
+        display: none;
+      }
+    }
+
   }
+
+  &:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+
 }
+
+@import "athlete-box";
