Icons on open and close

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -46,10 +46,10 @@
 
     &.athlete-name {
       cursor: pointer;
-
+      
       font-size: 14px;
       background-color: @df-footer-gray;
-      .flex(0 0 100px);
+      .flex(0 0 150px);
 
       @media @mobile {
         display: block;
@@ -57,6 +57,14 @@
         height: 100%;
         text-align: left;
       }
+      
+      .fa {
+  .flex(0 0 40px);
+  cursor: pointer;
+  font-size: 14px;
+
+
+}
     }
 
     &.event{
