--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -19,6 +19,10 @@
     @media @mobile {
       display: block;
     }
+    
+    &.off {
+      display: none;
+    }
 
     &.dates {
       font-size: 13px;
