--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -50,6 +50,8 @@
 
     &.athlete-name {
       cursor: pointer;
+      text-align: left;
+      padding-left: 15px;
 
       font-size: 14px;
       background-color: @df-footer-gray;
