--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -8,6 +8,15 @@
 
 }
 
+.legend {
+  .display-flex();
+  .flex-direction(column);
+  width: 30;
+  .key {
+    .flex(1 0 0);
+  }
+
+}
 .table {
   padding-top: 100px;
   @media @mobile {
@@ -47,14 +56,17 @@
     &.highlight {
       background-color: lightblue;
     }
+    &.header {
+      .flex(0 0 150px);
+    }
 
     &.athlete-name {
       cursor: pointer;
       text-align: left;
-      padding-left: 15px;
+      font-weight: 700;
 
       font-size: 14px;
-      background-color: @df-footer-gray;
+      background-color:fade(@df-footer-gray, 80%);
       .flex(0 0 150px);
 
       @media @mobile {
@@ -62,31 +74,47 @@
         width: 100%;
         height: 100%;
         text-align: left;
+
+
+
+        .info {
+          .display-flex();
+
+          img {      
+            .flex(1);
+          }
+          
+          .stats {
+            .flex(1);
+          }
+        }
       }
 
       .fa {
         .flex(0 0 40px);
         cursor: pointer;
         font-size: 14px;
+        margin-right: 5px;
 
 
       }
     }
 
     &.event{
-      background-color: @st-light-purple;
+      background-color:  fade(#1184BB, 40%);
       font-size: 8px;
       text-align: center;
-      
+
+
       @media @mobile {
         margin-left: 2%;
         display: none;
-        
+
         &.show {
           display: block;
         }
       }
-      
+
       &.highlight {
         background-color: rgb(180, 140, 220);
         cursor: default;
@@ -94,6 +122,11 @@
         @media @mobile {
           background-color: @st-light-purple;
         }
+      }
+
+      &.medal {
+        background-color:  fade(#FEB42E, 40%);
+
       }
     }  
 
@@ -104,7 +137,7 @@
       &.highlight {
         background-color: lightblue;
       }
-      background-color: whitesmoke;
+      background-color: fade(#1184BB, 10%);
     }
 
     @media @mobile {
