--- a/src/css/tooltip.less
+++ b/src/css/tooltip.less
@@ -4,33 +4,58 @@
   @media @mobile {
     text-align: left;
     width: 100%;
-    
+
   }
-  
+
 
   .icon {
     position: relative;
-      @media @mobile {
-        display: none;
-      }
+    ;
+    &.grow:hover
+    {
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      transform: scale(1.1);
+    }
+    @media @mobile {
+      display: none;
+    }
 
   }
   .tooltiptext {
     visibility: hidden;
-    width: 200px;
-    background-color: @st-light-green;
+    display: inline-block;
+    width: 250px;
+    background-color: @df-off-white;
     color: black;
     font-size: 14px;
-    text-align: center;
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
     z-index: 1;
     bottom: 125%;
     left: 50%;
+    padding-left: 10px;
     margin-left: -100px;
     opacity: 0;
     transition: opacity .5s;
+
+    .fa {
+      padding-right: 8px;
+
+    }
+    .title {
+
+      font-size: 18px;
+      text-align: center;
+      padding: 5px 0;
+    }
+    .info {
+      .sport {
+        text-align: center; 
+      }
+      text-align: left;
+    }
 
     @media @mobile {
       visibility: visible;
@@ -42,8 +67,8 @@
       left: 0;
       bottom: 0%;
       margin: 5px;
-      display: inline-block;
       text-align: left;
+      display: inline-block;
     }
     &:after {
       content: "";
@@ -53,7 +78,7 @@
       margin-left: -5px;
       border-width: 5px;
       border-style: solid;
-      border-color: @st-light-green transparent transparent transparent;
+      border-color:  @df-off-white transparent transparent transparent;
       @media @mobile {
         display: none;
       }
