--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -2,24 +2,46 @@
 @import "seattletimes";
 
 .container {
-  margin-left: 5%; //DELETE LATER
   max-width: 960px;
+  margin: auto;
   font-family: @df-sans;
 
 }
 
 .legend {
-  .display-flex();
-  .flex-direction(column);
-  width: 30%;
-  .key {
-    .flex(1 0 0);
+  margin-top: 20px;
+  display: inline-block;
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    float:left;
+
+    margin: 3px 0;
+    
+
+  }
+  h5 {
+    margin:0;
+    text-transform:uppercase;
+    color:#333;
+    font-size:.9em;
   }
 
+  img {
+    width:25px;
+  }
+     li .splotch {
+      display: inline-block;
+      height: 25px;
+      width: 25px;
+      background-color:  fade(#FEB42E, 40%);
+    }
 }
 
+
+
 .table {
-  padding-top: 100px;
   @media @mobile {
     padding: 0;
   }
@@ -29,7 +51,7 @@
     .align-content(center);
     @media @mobile {
       display: block;
-      
+
     }
 
     &.off {
@@ -63,13 +85,13 @@
     }
 
     &.athlete-name {
-      cursor: pointer;
       text-align: left;
       font-size: 14px;
       .flex(0 0 250px);
-      
-        @media @mobile {
+
+      @media @mobile {
         display: block;
+        cursor: pointer;
         width: 100%;
         height: 100%;
         text-align: left;
@@ -79,19 +101,26 @@
       img {      
         padding: 1% 2%;        
         width: 30%;
-             @media @mobile {
-        text-align: left;
+        @media @mobile {
+          text-align: left;
 
+        }
       }
-      }
-      
+
       .stats {
         display: inline-block;
         width: 70%;
         float: right;
-        
+
         .fa {
           padding-left: 5px;
+          
+          &.fa-chevron-down {
+            display: none;
+            @media @mobile {
+              display: inline-block;
+            }
+          }
         }
       }
 
@@ -107,13 +136,12 @@
     }
 
     &.event{
-      background-color:  fade(#1184BB, 40%);
-      font-size: 8px;
       text-align: center;
+      background-color: fade(#1184BB, 40%);
 
 
       @media @mobile {
-        margin-left: 2%;
+        border-left: solid black 6px;
         display: none;
 
         &.show {
@@ -152,6 +180,10 @@
 
   }
 }
+  
+  .expand {
+
+  }
 
 @import "athlete-box";
 @import "tooltip";
