--- a/src/css/tooltip.less
+++ b/src/css/tooltip.less
@@ -6,12 +6,10 @@
     img {
       max-width: 100%;
     }
-    
-    &.medal {
-      background-color: fade(#FEB42E, 40%);;
-    }
+
     @media @mobile {
       display: none;
+      width: 20%;
       max-width: 100%;
     }
 
@@ -21,25 +19,39 @@
       transform: scale(1.1);
     }
   }
-  
+
   .tooltiptext {
     visibility: hidden;
+    text-align: left;
     display: inline-block;
     width: 200px;
-    background-color: @df-off-white;
+    background-color: @df-light-gray;
     color: black;
     font-size: 14px;
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    bottom: 125%;
+    bottom: 105%;
     left: 50%;
     padding-left: 10px;
     margin-left: -100px;
     opacity: 0;
     transition: opacity .5s;
-
+    
+    @media @mobile {
+      visibility: visible;
+      opacity: 1;
+      position: relative;
+      bottom: 0;
+      margin-left: auto;
+      background-color: inherit;
+      border-radius: 0px;
+      left: 0;
+      bottom: 0%;
+      text-align: left;
+      display: inline-block;
+    }
     .fa {
       padding-right: 8px;
 
@@ -50,18 +62,7 @@
     }
 
 
-    @media @mobile {
-      visibility: visible;
-      opacity: 1;
-      position: relative;
-      bottom: 0;
-      background-color: inherit;
-      border-radius: 0px;
-      left: 0;
-      bottom: 0%;
-      text-align: left;
-      display: inline-block;
-    }
+
     &:after {
       content: "";
       position: absolute;
@@ -70,7 +71,7 @@
       margin-left: -5px;
       border-width: 5px;
       border-style: solid;
-      border-color:  @df-off-white transparent transparent transparent;
+      border-color:  @df-light-gray transparent transparent transparent;
       @media @mobile {
         display: none;
       }
