--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -67,6 +67,7 @@
   &-column {
     .display-flex;
     .align-content(center);
+    .justify-content(center);
     @media @mobile {
       display: block;
     }
@@ -90,7 +91,7 @@
     .row-item {
       .flex(1 1 0%);
       min-height: 0;
-min-width: 0;
+      min-width: 0;
       background-color: fade(#1184BB, 10%);
       border: 1px solid rgba(255, 255, 255, 1);
 
@@ -178,3 +179,4 @@ min-width: 0;
   font-size: 16px;}
 
 @import "tooltip";
+@import "athlete-box";
