--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -10,13 +10,14 @@
 
 .legend {
   margin-top: 20px;
-  margin-left: 60%;
+  margin-left: 80%;
   display: inline-block;
   box-shadow: 4px 4px 4px fade(black, 20%);
   max-width: 360px;
   font-size: 14px;
+
   margin-bottom: 10px;
-  width: 40%;
+  width: 20%;
   @media @mobile {
     position: static;
     font-size: 12px;
@@ -27,12 +28,10 @@
 
   ul {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
+    padding: 0;    
     float:left;
-    vertical-align: middle;
     margin: 3px 0;
-
+    margin-bottom: 2px;
 
   }
   h2 {
@@ -40,17 +39,14 @@
     margin: 0;
   }
 
-  img {
-    width:25px;
-  }
-  li .splotch {
+  .splotch {
     display: inline-block;
-    height: 25px;
+    vertical-align: middle;
     width: 25px;
-    background-color: fade(#1184BB, 40%);
-
+    margin-right: 5px;
     &.medaling {
       background-color:  fade(#FEB42E, 40%);
+      height: 25px;
 
     }
   }
@@ -78,6 +74,8 @@
 
     &.headers {
       font-size: 15px;
+      font-weight: 700;
+      text-align: center;
       @media @tablet {
         font-size: 10px;
       }
@@ -100,14 +98,12 @@
         width: 100%;
       }
 
-      &.header {
-        .flex(0 0 250px);
-      }
-
       &.athlete-name {
         .flex(0 0 250px);
         text-align: left;
         font-size: 14px;
+        cursor: pointer;
+
 
         @media @mobile {
           display: block;
@@ -123,18 +119,20 @@
           display: block;
           width: 70%;
           float: right;
-          
+
           .name {
-            font-size: 16px;
+            font-size: 17px;
             font-weight: 700;
           }
           .fa {
-            padding-left: 5px;
-
-            &.fa-chevron-down, &.fa-chevron-up {
-              display: none;
+            padding-right: 15px;
+            padding-top: 5px;
+            float: right;
+            color: @df-middle-gray;
+            &:hover{
+              color: black;
               @media @mobile {
-                display: inline-block;
+                color:  @df-middle-gray;
               }
             }
           }
@@ -149,10 +147,10 @@
             display: block;
           }
         }
-        
-            &.medal {
-      background-color:  fade(#FEB42E, 40%);
-    }
+
+        &.medal {
+          background-color:  fade(#FEB42E, 40%);
+        }
       }  
 
       &.noevent {
@@ -167,16 +165,20 @@
 }
 
 .expand {
-  background-color: #4CAF50;
+  background-color: fade(#1184BB, 80%);
   cursor: pointer;
-  border: none;
   color: white;
-
+  margin: auto;
+  margin: 10px 0;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 16px;}
+
+.credit {
+  font-size: 11.5px;
+  color: @df-middle-gray;
+}
 
 @import "tooltip";
 @import "athlete-box";
