--- a/src/css/tooltip.less
+++ b/src/css/tooltip.less
@@ -1,7 +1,6 @@
 .tooltip {
   position: relative;
   text-align: center;
-
   .icon {
     position: relative;
     img {
@@ -62,6 +61,10 @@
       padding: 5px 0;
     }
 
+    .nbc {
+      margin-left: 30px;
+      font-size: 11px;
+    }
 
 
     &:after {
