--- a/src/css/athlete-box.less
+++ b/src/css/athlete-box.less
@@ -18,52 +18,38 @@
 
 
   .box {
-    
+    background-color: fade(#1184BB, 30%);
+    .display-flex();
+    @media @mobile {
+      padding-left: 15px;
+      margin: auto;
+      padding: 20px 10px;
+      border-left: solid #1184BB 6px;
+      .flex-direction(column);
+    }
+    .item {
+      margin-right: 30px;
+              font-size: 14px;
+
+    }
     .header {
       font-weight: 700;
+      font-size: 17px;
       margin: 0;
     }
     
     .content {
       margin: 0;
     }
-    background-color: fade(#1184BB, 30%);
-    .display-flex();
-    .justify-content(flex-end);
-    
-    @media @mobile {
-      .flex-direction(column);
-      
-    }
-    .icon {
-      .flex(1);
-      img {
-        width: 50%;
-        @media @mobile {
-          max-width: 100px;
-        }
+    img {
+      max-width: 75px;
+      @media @mobile {
+        display: none;
       }
     }
+    
+    
 
 
-    .event {
-      .flex(1);
-    }   
-    
-    .hometown {
-      .flex(1);
-    }   
-    
-    .connection {
-      .flex(1);
-    } 
-    
-    .age {
-      .flex(1 3);
-    } 
-    
-    .twitter {
-      .flex(1);
-    }
   }
 }
