--- a/src/css/tooltip.less
+++ b/src/css/tooltip.less
@@ -1,6 +1,9 @@
 .tooltip {
   position: relative;
   text-align: center;
+  @media @mobile {
+    text-align: left;
+  }
   .icon {
     position: relative;
     img {
@@ -8,9 +11,8 @@
     }
 
     @media @mobile {
-      display: none;
-      width: 20%;
-      max-width: 100%;
+      width: 10%;
+      float: left;
     }
 
     &.grow:hover {
@@ -24,7 +26,7 @@
     visibility: hidden;
     text-align: left;
     display: inline-block;
-    width: 200px;
+    width: 300px;
     background-color: @df-light-gray;
     color: black;
     font-size: 14px;
@@ -32,14 +34,15 @@
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    bottom: 105%;
+    bottom: 115%;
     left: 50%;
     padding-left: 10px;
-    margin-left: -100px;
+    margin-left: -150px;
     opacity: 0;
     transition: opacity .5s;
     
     @media @mobile {
+      width: auto;
       visibility: visible;
       opacity: 1;
       position: relative;
@@ -60,9 +63,19 @@
       font-size: 18px;
       padding: 5px 0;
     }
+    .date {
+      display: none;
+      @media @mobile {
+        display: block;
+        width: 25%;
+
+        font-size: 17px;
+        font-weight: 700; 
+        background-color: white;
+      }
+    }
 
     .nbc {
-      margin-left: 30px;
       font-size: 11px;
     }
 
