--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -99,7 +99,6 @@ h2 {
 
     &.headers {
       font-size: 15px;
-      font-weight: 700;
       text-align: center;
       @media @tablet {
         font-size: 10px;
@@ -122,19 +121,18 @@ h2 {
         display: block;
         width: 100%;
       }
-      &.header {
-        padding-left: 15px;
-      }
       &.athlete-name {
         .flex(0 0 250px);
         text-align: left;
         font-size: 14px;
         cursor: pointer;
 
-
         @media @mobile {
           display: block;
-          cursor: pointer;
+        }
+        &.header {
+          padding-left: 15px;
+          cursor: default;
         }
 
         img {      
