--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -112,6 +112,7 @@ h2 {
     .schedule {
       .flex(1 1 0%);
       .display-flex();
+      flex-wrap: wrap;
       
       @media @mobile {
         display: block;
