Fixing weird rendering problems

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -120,6 +120,9 @@ h2 {
     }
 
     .row-item {
+       &.highlight {
+    background-color: gray;
+  }
       .flex(1 1 0%);
       min-height: 0;
       min-width: 0;
@@ -196,6 +199,9 @@ h2 {
           display: none;
         }  
 
+      }
+      .done {
+        background-color: gray;
       }
     }
   }
