--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -121,7 +121,7 @@ h2 {
 
     .row-item {
        &.highlight {
-    background-color: gray;
+    background-color: fade(#1184BB, 40%);
   }
       .flex(1 1 0%);
       min-height: 0;
