--- a/src/css/tooltip.less
+++ b/src/css/tooltip.less
@@ -39,7 +39,7 @@
     padding-left: 10px;
     margin-left: -150px;
     opacity: 0;
-    transition: opacity .5s, ease-out 1s;
+    transition: opacity .5s, ease-out .5s;
     
     @media @mobile {
       width: auto;
